# chubby

./: .gitignore  LICENSE  README.md  install.sh  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: install.md  smoke-test.md
docs/plans/: 2026-05-02-embedded-claude-pty.md
scripts/: release-tui.sh
src/chub/: __init__.py
src/chub/cli/: client.py  main.py
src/chub/daemon/: clock.py  colors.py  events.py  handlers.py  hooks.py  logs.py  main.py  notify.py  paths.py  persistence.py  pidlock.py  rebuild.py  registry.py  runs.py  server.py  subscriptions.py
src/chub/proto/: errors.py  rpc.py  schema.py
src/chub/wrapper/: client.py  main.py  pty.py
src/chubby/: __init__.py  version.py
src/chubby/cli/: client.py  format.py  main.py  output.py
src/chubby/daemon/: colors.py  git_status.py  handlers.py  hooks.py  ids.py  lifecycle_scripts.py  logs.py  main.py  notify.py  paths.py  persistence.py  pidlock.py  ports.py  presets.py  project_config.py  rebuild.py  registry.py  run_processes.py  runs.py  server.py  session.py  subscriptions.py  worktree.py
src/chubby/proto/: errors.py  frame.py  rpc.py  schema.py
src/chubby/wrapper/: client.py  main.py  pty.py
tests/: conftest.py  test_smoke.py
tests/cli/: test_client.py  test_format.py  test_grep.py  test_hook_stdin_payload.py  test_install_hooks.py  test_main.py  test_output_modes.py  test_preset_cli.py  test_release.py  test_send.py  test_update_check.py
tests/daemon/: test_assistant_turn_marks_idle.py  test_clock.py  test_colors.py  test_events.py  test_first_message_preview.py  test_force_claude_redraw.py  test_fts.py  test_fts5_quoting.py  test_get_session_history.py  test_git_status.py  test_handlers.py  test_hooks.py  test_ids.py  test_inject.py  test_inject_marks_thinking.py  test_lifecycle_scripts.py  test_list_all_claude_jsonls.py  test_logs.py  test_logs_fts_integration.py  test_main.py  test_notify.py  test_persistence.py  test_pidlock.py  test_ports.py  test_ports_sweep.py  test_presets.py  test_project_config.py  test_pty_chunk_broadcast.py  test_rebuild.py  test_recent_cwds.py  test_refresh_claude.py  test_register_evicts_dead.py  test_registry.py  test_registry_persistence.py  test_release_session.py  test_resize_pty.py  test_run_processes.py  test_scanner.py  test_server.py  test_setup_runs_on_spawn.py  (+7 more)
tests/fakeclaude/: fakeclaude.py
tests/integration/: test_attach.py  test_attach_readonly.py  test_broadcast.py  test_history.py  test_promote_detach.py  test_purge.py  test_readonly.py  test_respawn.py  test_resume.py  test_spawn.py  test_start.py  test_tags.py  test_tmux_attach.py  test_wrapper_e2e.py
tests/proto/: test_errors.py  test_frame.py  test_rpc.py  test_schema.py  test_schema_sessions.py
tests/wrapper/: test_clear_screen_on_launch.py  test_client.py  test_client_stress.py  test_post_claude_shell.py  test_pty.py  test_pty_env_strip.py  test_respawn_guard.py  test_restart_loop.py  test_resume_is_safe.py
tui/: .goreleaser.yaml  go.mod  go.sum
tui/cmd/chub-tui/: main.go  main_test.go
tui/cmd/chubby-tui/: main.go
tui/internal/model/: active_pane_test.go  attach_picker_test.go  banner_test.go  banner_view.go  branch_glyph_test.go  chub_clone_test.go  chub_commands.go  chub_commands_test.go  chub_complete_test.go  chub_release_all_test.go  chub_run_test.go  chubby_commands_test.go  claude_history.go  claude_history_test.go  complete.go  complete_test.go  conversation_test.go  copy_test.go  ctrl_c_test.go  ctrl_d_release_test.go  dead_session_view_test.go  dedup_test.go  detach_test.go  editor_pane_test.go  filter_test.go  folders.go  folders_test.go  grouping.go  grouping_test.go  help_test.go  history_test.go  key_dispatch_test.go  migration.go  migration_test.go  model.go  move_to_folder_test.go  new_folder_modal_test.go  pane_search.go  pane_search_test.go  ports_badge_test.go  (+28 more)
tui/internal/ptypane/: pane.go  pane_test.go
tui/internal/rpc/: client.go  client_test.go
tui/internal/views/: compose.go  detach_window.go  detach_window_test.go  editor.go  editor_test.go  external_editor.go  external_editor_test.go  format.go  format_test.go  grep.go  history.go  markdown.go  markdown_test.go  rail_command.go  search.go  slash.go  slash_test.go  (+8 more)
(+59 files in other folders)
