[project]
name = "chubby"
version = "0.1.0"
description = "Hub for orchestrating multiple Claude Code CLI sessions"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "ptyprocess>=0.7",
  "watchdog>=4.0",
  "aiosqlite>=0.20",
  "pydantic>=2.7",
  "ulid-py>=1.1",
]

[project.scripts]
chubby = "chubby.cli.main:app"
chubbyd = "chubby.daemon.main:main"
chubby-claude = "chubby.wrapper.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chubby"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
