[project]
# Distribution name on PyPI. The bare name "chubby" was already
# taken by an unrelated IGitt-based project, so installs collided.
# The CLI commands ("chubby", "chubbyd", "chubby-claude") are
# unaffected — those are defined in [project.scripts] below and
# stay as-is.
name = "chubby-orchestrator"
dynamic = ["version"]
description = "Local TUI orchestrator for parallel Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "talmes1502"}]
urls = {Homepage = "https://github.com/talmes1502/chubby", Source = "https://github.com/talmes1502/chubby"}
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "ptyprocess>=0.7",
  "watchdog>=4.0",
  "aiosqlite>=0.20",
  "pydantic>=2.7",
  "ulid-py>=1.1",
  "packaging>=24",
]

[project.scripts]
chubby = "chubby.cli.main:app"
chubbyd = "chubby.daemon.main:main"
chubby-claude = "chubby.wrapper.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Auto-derive the version from git tags. ``git tag v0.2.0 && git push
# --tags`` IS the version bump — no manual version.py edit. Between
# tags, we serialize as ``0.1.1.dev<N>+g<sha>`` so wheels still install
# (PEP 440 dev/local format). The ``raw-options`` indirection lets us
# also write the resolved version to src/chubby/version.py at build
# time so `from chubby import __version__` keeps working at runtime
# without parsing git.
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/chubby/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chubby"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
